--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<div><span style="float:right;"><a href="https://console.upyun.com/register/?invite=rkslYZ-7z" target="_blank" rel="nofollow"><img src="https://www.laobuluo.com/banner/upyun.png"></div>
+<span style="float:right;"><a href="https://console.upyun.com/register/?invite=rkslYZ-7z" target="_blank" rel="nofollow"><img src="https://www.laobuluo.com/banner/upyun.png">
