--- a/_layout/post.html
+++ b/_layout/post.html
@@ -1,3 +1,10 @@
+---
+layout: post
+comments: true
+---
+
+{{ content }}
+
 <div id="gitmentContainer"></div>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
