--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,17 +1,10 @@
----
-layout: post
-comments: true
----
-
-{{ content }}
-
 <div id="gitmentContainer"></div>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
     owner: 'hy05190134',
-    repo: 'hy05190134.github.com',
+    repo: 'hy05190134.github.io',
     oauth: {
         client_id: 'd5058a6ca29c85a87fc7',
         client_secret: 'c4926f9962330c597609ad575eb70578b2e582d9',
