--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/theme-next/theme-next-gitment@1/default.css"/>
 <script>
 var gitment = new Gitment({
+    id: '{{ page.date }}',
     owner: 'hy05190134',
     repo: 'hy05190134.github.io',
     oauth: {
