--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -5,7 +5,7 @@
 var gitment = new Gitment({
     id: '{{ page.date }}',
     owner: 'hy05190134',
-    repo: 'hy05190134.github.io',
+    repo: 'hy05190134.github.com',
     oauth: {
         client_id: 'd5058a6ca29c85a87fc7',
         client_secret: 'c4926f9962330c597609ad575eb70578b2e582d9',
